--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
-remote-theme:  nielsenramon/chalk
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+title: Deanna Minasian
+description: Digital Archivist & Graduate Student
+show_downloads: false
